Added the publish time to each post.

--- a/_posts/2010-04-17-im-completely-in-love.html
+++ b/_posts/2010-04-17-im-completely-in-love.html
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: I’m completely in love!
+date: 2010-04-17 4:24:00 -5
 ---
 <p>This is my bragging mama post (or at least the first one.)&nbsp; Layla Rose entered the world at 1:44 in the afternoon on December 30th, 2009.&nbsp; She was a modest, but respectable seven pounds twelve ounces and 19 1/2 inches long.</p>
 <p><img src="{{ site.url }}/images/posts/16969_102947859728762_100000406440088_72458_6147256_n.jpg" width="244" height="184"></p>
