--- a/_posts/2011-03-08-high-on-passion.html
+++ b/_posts/2011-03-08-high-on-passion.html
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: High on Passion
+date: 2011-03-08 1:40:00 -6
 ---
 <p>I’ve found lately, that I get the majority of my news from Twitter, Comedy Central, and NPR’s “Wait, Wait, Don’t Tell Me.” As a result, I know there’s a lot going on about Charlie Sheen lately, but I didn’t know until almost a week later that my father-in-law made it through the primary elections for city council and is still in the running. I like my news funny and, apparently, irrelevant. But a few days ago, a twitter comic I follow called Peter Coffin, brought my attention to this video posted on YouTube: </p>
 <div style="padding: 0; margin: 0; display: inline;" id="scid:5737277B-5D6D-4f48-ABFC-DD9C333F4C5D:f46f799f-c5c2-45ad-a72f-3ad567276089" class="wlWriterEditableSmartContent"><div id="2c60bfd1-7cb8-4aa0-8e2a-f650c9d80b03" style="margin: 0; padding: 0; display: inline;"><div><object width="448" height="252"><param name="movie" value="http://www.youtube.com/v/e6t6d9YBuFM?hl=en&amp;hd=1"><embed src="http://www.youtube.com/v/e6t6d9YBuFM?hl=en&amp;hd=1" type="application/x-shockwave-flash" width="448" height="252"></object></div></div><div style="width:448px;clear:both;font-size:.8em">Hate Comes to Orange County</div></div>
