--- a/_posts/2010-04-22-here-just-let-me-do-it.html
+++ b/_posts/2010-04-22-here-just-let-me-do-it.html
@@ -2,6 +2,7 @@
 layout: post
 title: Here, just let me do it.
 date: 2010-04-22 23:01:36 -5
+permalink: /2010/04/22/HereJustLetMeDoIt.aspx
 ---
 <p>This afternoon, while Layla and I watched for John to come home, I counted four separate buses entering our neighborhood.&nbsp; Is that really necessary?&nbsp; How many different schools do the children in our neighborhood attend?&nbsp; As I’ve stated before, our neighborhood has no outlet.&nbsp; It’s just half a mile of street with several cul-de-sacs and two loops.&nbsp; Couldn’t the city save a little by having only one bus or even two come to our neighborhood?&nbsp; And I saw at least one more bus pass our street and enter the neighborhood on the other side of the creek.&nbsp; I would think that area could have been combined with ours.&nbsp; Who makes these routes and schedules?&nbsp; I realize that I don’t have all the information in front of me, but this is exactly the type of puzzle I love to solve.&nbsp; Let’s make this as efficient as possible.&nbsp; I was the same way about our schedule at work.&nbsp; Our manager didn’t like to do it and said she found it difficult.&nbsp; Could it really have been that hard?&nbsp; Again, I never had all the information.&nbsp; It could have actually been rather complicated.&nbsp; For me, that would have made it more fun.&nbsp; I really wanted to do it for her, but I highly doubt I would have been allowed to do so.&nbsp; Everything is so regulated in a company.&nbsp; It seems to make things less efficient instead of more efficient.</p>
 <p>That’s just my rant for the day.</p>
