--- a/_posts/2010-04-24-shits-and-giggles.html
+++ b/_posts/2010-04-24-shits-and-giggles.html
@@ -2,6 +2,7 @@
 layout: post
 title: Shits and Giggles
 date: 2010-04-24 15:25:35 -5
+permalink: /2010/04/24/ShitsAndGiggles.aspx
 ---
 <p>I’ve never really understood this phrase until now.&nbsp; Shitting and giggling only go together when you’re a baby.&nbsp; This morning, I had Layla sitting in her tub on the floor of the bathroom while I put on makeup and brushed my hair.&nbsp; She was so happy and pleasant.&nbsp; She even laughed for me quite a bit.&nbsp; I kept asking her what was so funny.&nbsp; I finished my routine, picked her up, and found out <em>exactly</em> what was so funny.&nbsp; Lovely baby poop was slowly creeping up her back.</p>
 <p>I really don’t know what I’m doing wrong.&nbsp; I don’t remember my brothers blowing out their diapers like she does.&nbsp; The worst was a few weeks ago when we were out getting John’s car washed.&nbsp; About a mile away from Green Lantern, we heard the gurgling sound of juicy excrement filling our daughter’s diaper.&nbsp; We laughed and casually commented on how “fun” that would be change once we’d finished the car wash.&nbsp; If only we knew…</p>
