--- a/_posts/2010-05-01-hooray-insomnia.html
+++ b/_posts/2010-05-01-hooray-insomnia.html
@@ -2,6 +2,7 @@
 layout: post
 title: Hooray! Insomnia!
 date: 2010-05-01 2:39:00 -5
+permalink: /2010/05/01/HoorayInsomnia.aspx
 ---
 <p>I have battled insomnia since at least junior high.&nbsp; Tonight, it’s winning.&nbsp; So, I’ve come downstairs to post on my blog.&nbsp; I’m not totally with it, so forgive me if none of this makes sense.&nbsp; Babble babble babble.&nbsp; stream of consciousness.&nbsp; stupid baby monitor is all static down here.&nbsp; i think it might be because of the computers. not really sure though.&nbsp; we were listening to a stackoverflow podcast as we fell asleep tonight, so my first dream this evening was about stackexchange sites. pretty lucid.&nbsp; i think Layla might be waking up, but i can’t really tell because the baby monitor is too staticy. staticky? static-y?&nbsp; i guess it’s not a real word.&nbsp; Windows Live Writer says they’re all wrong.</p>
 <p>it really sucks being both tired and unable to sleep.&nbsp; What kind of condition is that?&nbsp; Like, what if you were hungry and kept putting food up to your mouth, but your mouth kept closing before you could put the food in?&nbsp; That’s ridiculous.&nbsp; Or if you had to pee, and you sat down on the toilet and your body was like, “no. i’m gonna hold it.”&nbsp; it’s a good thing tomorrow (today) is saturday. I can take a nap later if I need to.</p>
