--- a/_posts/2010-10-14-rant-via-twitter.html
+++ b/_posts/2010-10-14-rant-via-twitter.html
@@ -2,6 +2,7 @@
 layout: post
 title: Rant Via Twitter
 date: 2010-10-14 14:03:38 -5
+permalink: /2010/10/14/RantViaTwitter.aspx
 ---
 <p>Firstly, I’m going to <strong>not</strong> apologize for having taken so long to write.&nbsp; If I do that, every blog post will begin with the same apology:&nbsp; “wah. wah. my life is soooo busy.&nbsp; I wish I could just write alllllll the time.”&nbsp; No one wants to read that.&nbsp; From now on, I’ll just post when I have something to say and the time to say it dammit.</p>
 <p>Coffee Rant</p>
