Renamed "permalink" to "original".

--- a/_posts/2010-04-14-allow-me-to-introduce-myself.html
+++ b/_posts/2010-04-14-allow-me-to-introduce-myself.html
@@ -2,7 +2,7 @@
 layout: post
 title: Allow me to introduce myself
 date: 2010-04-14 20:00:00 -0500
-permalink: /2010/04/14/AllowMeToIntroduceMyself.aspx
+original: /2010/04/14/AllowMeToIntroduceMyself.aspx
 ---
 <p>First, I need to congratulate my dear friend Ann.&nbsp; She joined the ranks of motherhood at 4:15 this morning.&nbsp; Congratulations, Ann!&nbsp; I'm so excited for you, and I can't wait to meet baby Evelyn! </p>
 <p>Now I suppose I ought to explain who I am.&nbsp; I'm obviously a new mother, but I'm also a daughter, sister, friend, and wife-to-be.&nbsp; I used to be a coworker as well, but Layla couldn't stand to have me away for four or more hours at a time.&nbsp; So my fiancé John and I decided it wasn't worth the stress or heartache, and I became a full-time stay-at-home mom.&nbsp; As a very talented software engineer, he can support us comfortably, and we can spend our nights and weekends as a family. </p>
