--- a/_posts/2011-09-07-the-road-to-self-guided-sleep.html
+++ b/_posts/2011-09-07-the-road-to-self-guided-sleep.html
@@ -2,7 +2,7 @@
 layout: post
 title: The Road to Self-Guided Sleep
 date: 2011-09-07 9:18:00 -5
-permalink: /2011/09/07/TheRoadToSelfGuidedSleep.aspx
+original: /2011/09/07/TheRoadToSelfGuidedSleep.aspx
 ---
 <p>I finally have a fairly solid parenting success I can talk about. For 3 weeks now, we’ve had Layla on a proper, self-soothing sleep schedule. But we had a long way to go to get there.</p>
 <p>The entire time I was nursing her (through about 8 months old) we co-slept with her. I quickly learned how to comfortably feed her while lying down, and that saved us some precious sleeping time. Around the time I weaned her, we transitioned her out of our bed and our room. I would sit and soothe her to sleep with a bottle and finally lay her down in her bed. But her pediatrician recommended we take her off the bottle by 15 months at the latest.&nbsp; This was difficult because my niece Maddie (4 months younger than Layla) lives with us. When Layla saw Maddie’s bottle, she’d try to steal it. But we eventually weaned her from the bottle to sippy cups. And this was fine during the day, but for going to bed, it was trickier. Part of the point of ditching the bottle was to ditch nighttime milk as well since it can cause tooth decay when it sits in the baby’s mouth overnight. So we used a cup of water instead. But the older Layla got, the harder it was for me to soothe her to sleep. She found things to distract her. And she was getting bigger. And I was getting bigger; at least, my belly was. I couldn’t sit with her for the full time it took for her to fall asleep in the position she required without having some back pain or losing feeling in my butt.</p>
