--- a/_posts/2011-11-11-a-lifetime-of-story-telling.html
+++ b/_posts/2011-11-11-a-lifetime-of-story-telling.html
@@ -2,7 +2,7 @@
 layout: post
 title: A Lifetime of Story Telling
 date: 2011-11-11 8:44:00 -06:00
-permalink: /2011/11/11/ALifetimeOfStoryTelling.aspx
+original: /2011/11/11/ALifetimeOfStoryTelling.aspx
 ---
 <p>I’ve always enjoyed telling stories, but yesterday I found out just how early my story telling days began. My mom just came across a few pieces of paper on which she had copied down a story I dictated to her in March of 1990 at age four. I’m not sure many people will care about this besides me, but I wanted to preserve it while I had the chance. Here it is as copied down by my loving mother:</p>
 <blockquote>
