--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@ layout: default
 title: Home
 ---
 {% for post in site.posts %}
-  <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a><a href="{{ post.url }}#disqus_thread" class="disqus-thread"></a></li>
+  <article>
+    <header><a href="{{ post.url }}">{{ post.title }}</a> <span class="date">{{ post.date | date_to_string }}</span></header>
+{{ post.content | truncate: 450 }}
+    <footer><a href="{{ post.url }}">Read more &raquo;</a> <a href="{{ post.url }}#disqus_thread" class="disqus-thread"></a></footer>
+  </article>
 {% endfor %}
 
 <script type="text/javascript">
