--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 {% for post in site.posts %}
   <article>
     <header><a href="{{ post.url }}">{{ post.title }}</a> <span class="date">{{ post.date | date_to_string }}</span></header>
-{{ post.content | truncate: 450 }}
+{{ post.content | strip_html | truncatewords: 50 }}
     <footer><a href="{{ post.url }}">Read more &raquo;</a> <a href="{{ post.url }}#disqus_thread" class="disqus-thread"></a></footer>
   </article>
 {% endfor %}
