--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 {% for post in site.posts %}
   <article>
-    <header><a href="{{ post.url }}">{{ post.title }}</a> <span class="date">{{ post.date | date_to_string }}</span></header>
+    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1> <span class="date">{{ post.date | date_to_string }}</span>
 {{ post.content | strip_html | truncatewords: 50 }}
     <footer><a href="{{ post.url }}">Read more &raquo;</a> <a href="{{ post.url }}#disqus_thread" class="disqus-thread"></a></footer>
   </article>
