--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: Home
 {% for post in site.posts %}
   <article>
     <h1><a href="{{ post.url }}">{{ post.title }}</a></h1> <span class="date">{{ post.date | date_to_string }}</span>
-{{ post.content | strip_html | truncatewords: 50 }}
-    <footer><a href="{{ post.url }}">Read more &raquo;</a> <a href="{{ post.url }}#disqus_thread" class="disqus-thread"></a></footer>
+{{ post.content | strip_html | truncatewords: 50 }} <a href="{{ post.url }}">Read more...</a>
+    <a href="{{ post.url }}#disqus_thread" class="disqus-thread"></a>
   </article>
 {% endfor %}
 
