--- a/index.html
+++ b/index.html
@@ -2,13 +2,30 @@
 layout: default
 title: Home
 ---
-{% for post in site.posts %}
+{% for post in paginator.posts %}
   <article>
     <h1><a href="{{ post.url }}">{{ post.title }}</a></h1> <span class="date">{{ post.date | date_to_string }}</span>
 {{ post.content | strip_html | truncatewords: 50 }} <a href="{{ post.url }}" class="read-more">Read more...</a>
     <a href="{{ post.url }}#disqus_thread" class="disqus-thread"></a>
   </article>
 {% endfor %}
+
+<div class="pagination">
+  <span class="previous">
+    {% if paginator.previous_page %}
+      {% if paginator.previous_page == 1 %}
+      <a href="/" title="Previous Page">&laquo; Previous</a>
+      {% else %}
+      <a href="/page{{ paginator.previous_page }}/" title="Previous Page">&laquo; Previous</a>
+      {% endif %}
+    {% endif %}
+  </span>
+  <span class="next">
+    {% if paginator.next_page %}
+    <a href="/page{{ paginator.next_page }}/" title="Next Page">Next &raquo;</a>
+    {% endif %}
+  </span>
+</div>
 
 <script type="text/javascript">
 var disqus_shortname = 'dramamama';
